2012-12-23  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/pr55315.c: Cast to long rather than int.

2012-12-22  Tobias Burnus  <burnus@net-b.de>

	PR fortran/55763
	* gfortran.dg/unlimited_polymorphic_6.f90: New.

2012-12-21  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/55355
	* g++.dg/torture/pr55355.C: New test.

2012-12-21  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/55775
	* gcc.target/i386/pr55775.c: New test.

2012-12-21  David Edelsohn  <dje.gcc@gmail.com>

	* gcc.dg/pthread-init-2.c (dg-options): Define _XOPEN_SOURCE=500
	on AIX.

	* lib/target-supports.exp (add_options_for_tls): Add -pthread for
	AIX as well.
	(check_effective_target_powerpc_vsx_ok): Only test VSX on AIX 7.1
	and above.

	* gcc.c-torture/compile/pr44707.c: Do not try to assemble on AIX.

	* c-c++-common/pr43942.c: Remove XFAIL for AIX.

2012-12-21  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/55763
	* gfortran.dg/unlimited_polymorphic_4.f03: New test.

2012-12-21  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/52996
	* gcc.dg/torture/pr52996.c: New testcase.

2012-12-20  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/55750
	* gcc.c-torture/execute/pr55750.c: New test.

2012-12-20  Richard Biener  <rguenther@suse.de>

	PR middle-end/55740
	* g++.dg/torture/pr55740.C: New testcase.

2012-12-20  Jakub Jelinek  <jakub@redhat.com>

	PR c++/55619
	* c-c++-common/pr55619.c: New test.

2012-12-20  Tobias Burnus  <burnus@net-b.de>

	PR fortran/54818
	* gfortran.dg/transfer_intrinsic_4.f: New.

2012-12-19  Paul Thomas  <pault@gcc.gnu.org>

	* gfortran.dg/unlimited_polymorphic_1.f03: New test.
	* gfortran.dg/unlimited_polymorphic_2.f03: New test.
	* gfortran.dg/unlimited_polymorphic_3.f03: New test.
	* gfortran.dg/same_type_as_1.f03: Correct for improved message.

2012-12-19  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/arm/vmaxnmdf.c: New test.
	* gcc.target/arm/vmaxnmsf.c: Likewise.
	* gcc.target/arm/vminnmsf.c: Likewise.