@@ -1,5 +1,10 @@
 2012-12-23  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* gcc.target/mips/r10k-cache-barrier-10.c: Make a branch-likely
+	instruction more likely.
+
+2012-12-23  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	* gcc.target/mips/pr55315.c: Cast to long rather than int.
 
 2012-12-22  Tobias Burnus  <burnus@net-b.de>
